[package]
name = "txngraphs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.2.1"
anyhow = "1.0.98"
clap = {version = "4.5.41", features = ["derive"]}
cryo_freeze = "0.3.2"
petgraph = "0.8.2"
polars = { version = "0.36.2", features = ["polars-io", "lazy"] }
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zerocopy = "0.8.26"
